# file_signing_tool

examples/ffi/flutter/: pubspec.yaml
examples/ffi/flutter/lib/: main.dart
examples/wasm_browser/: package.json
extras/: Cargo.toml
extras/src/: lib.rs
signer/: Cargo.toml
signer-ffi/: Cargo.toml
signer-ffi/flutter/filecoin/: .gitignore
signer-ffi/flutter/filecoin/android/: build.gradle
signer-ffi/flutter/filecoin/lib/: filecoin.dart
signer-ffi/src/: extended_key.rs  lib.rs
signer-npm/js/: package.json
signer-npm/js/src/: index.js
signer/src/: api.rs  lib.rs
